--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         </head>
         <body>
             <h1>Run (🏃) Buddy</h1>
-            What We Do 
+            What We Do What You Do Your Trainers Reach Out
         </body>
 </html>
