--- a/index.html
+++ b/index.html
@@ -5,7 +5,53 @@
             <title>Run Buddy</title>
         </head>
         <body>
+            <div>
             <h1>Run (🏃) Buddy</h1>
             What We Do What You Do Your Trainers Reach Out
+            </div>
+            <div>
+                <div>What
+                    <div>
+                        <h1>Cheeseburger</h1>
+                    </div>
+                    <div>Pickeled beets</div>
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <div>mandms</div>
+                            <div>milk dudes</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- navigation -->
+            <header>
+                <h1>RUN BUDDY</h1>
+            </header>
+
+            <!-- hero/jumbotron -->
+            <section>
+            </section>
+            <!-- "what we do" section -->
+            <section>
+                <h2>What We Do</h2>
+            </section>
+            <!-- "what you do" section -->
+            <section>
+                <h2>What You Do</h2>
+            </section>
+            <!-- "meet the trainers" section -->
+            <section>
+                <h2>Meet The Trainers</h2>
+            </section>
+            <!-- "reach out" -->
+            <section>
+                <h2>Reach Out</h2>
+            </section>
+            <!-- "footer" -->
+            <footer>
+                <h2>"❤️ Made with love by Run Buddy."</h2>
+            </footer>
         </body>
 </html>
